# MyCLisp

./: Capabilities.txt  Makefile  Makefile.am  README.md  configure.ac  evaluator.c  myadditions.txt  prompt.c
src/: mpc.c  stdlib.myclisp
src/dependencies/: headers.h
